# raqa

./: .gitignore  Makefile  PLAN.md  README.md  agent.py  cli.py  pyproject.toml  requirements.txt  utils.py
data/: sample_data.csv
src/raqa/: _agent.py  _app.py  _data.py  agent.py  cli.py  config.py  db.py  utils.py
