[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raqa"
version = "1.0.0"
authors = [
  { name="Jordi Carrera Ventura", email="jordi.carrera.ventura@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "build",
  "faiss-cpu",
  "numpy",
  "openai",
  "python-frontmatter",
  "sentence-transformers",
  "tqdm",
  "typer[all]",
  "twine"
]

[project.urls]
"GitHub repository" = "https://github.com/JordiCarreraVentura/raqa"

[project.scripts]
raqa = "raqa.cli:app"