[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raqa"
version = "3.0.0"
authors = [
  { name="Jordi Carrera Ventura", email="jordi.carrera.ventura@gmail.com" },
]
description = "RAG-powered document Q&A — Streamlit + OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "openai",
  "openai-agents",
  "streamlit",
  "numpy",
  "python-dotenv",
]

[project.urls]
"GitHub repository" = "https://github.com/JordiCarreraVentura/raqa"
"PyPI" = "https://pypi.org/project/raqa"

[project.scripts]
raqa = "raqa.cli:main"
